# MatchMaster

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b7c8d9e0f1a2_add_resume_file_name.py  c1d2e3f4a5b6_add_jd_file_name.py  d2e3f4a5b6c7_add_calibration_tables.py  ef084b2f1d45_init.py
backend/app/: config.py  main.py
backend/app/api/v1/: calibration.py  config.py  evaluation.py  jd.py  stats.py
backend/app/application/: batch_evaluation.py  calibration_service.py  run_evaluation.py  upload_jd.py
backend/app/domain/entities/: dimension_score.py  evaluation.py  job_description.py  resume.py
backend/app/domain/scorers/: _constants.py  base.py  career_progression.py  depth_analyzer.py  education_matcher.py  experience_calc.py  keyword_overlap.py  red_flag_detector.py  role_type.py  skill_matcher.py
backend/app/domain/services/: evaluation_orchestrator.py  score_fusion.py
backend/app/infrastructure/: database.py  models.py
backend/app/infrastructure/cache/: redis_cache.py
backend/app/infrastructure/embeddings/: embedding_client.py  skill_taxonomy.py
backend/app/infrastructure/llm/: base.py  openai_client.py  token_estimator.py
backend/app/infrastructure/parsers/: base.py  docx_parser.py  pdf_parser.py  (+1 more)
backend/prompts/: consolidated_eval.jinja2  jd_extraction.jinja2  resume_extraction.jinja2
backend/scripts/: seed_calibration.py  seed_calibration_v3_role_discipline.py
backend/tests/: test_p1_p2_calibration.py  test_scoring_calibration.py
(+25 files in other folders)
